# py_tr24_car_ros

./: README.md  package.xml  setup.cfg  setup.py
launch/: demo.launch.py
py_tr24_car_ros/: README.md  car_logger.py  cmd_uart.py  parser.py  state_publisher.py  utils.py
py_tr24_car_ros/urdf/: rc_car.urdf.xml  tr24_car.rviz
urdf/: small_tank.urdf.xml
