<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_tr24_car_ros</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="alexanderfomin.develop@gmail.com">afomin</maintainer>
  <license>TODO: License declaration</license>


  <exec_depend>pyserial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <depend>tr24_ros_interfaces</depend>
</package>
